<resources>
    <string name="app_name">Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_classification">Classification</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New here ? SignUp</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="signin_instead">Sign in instead</string>
    <string name="sigup">SignUp</string>


    <string name="shop_by_category">Shop by Category</string>
    <string name="shop_by_stores">Shop by stores</string>

    <string name="nothing_here">Nothing here!!!</string>

    <string name="show_all"> Show All </string>
    <string name="offers"> Offers </string>
    <string name="canned_food"> Canned food </string>
    <string name="fresh_food"> Fresh food </string>
    <string name="freezers_food"> Freezers food </string>
    <string name="fruits_food"> Fruits food </string>
    <string name="vegetables_food"> Vegetables food </string>
    <string name="stock_out"> Stock out </string>
    <string name="quantity"> Quantity </string>
    <string name="remark">Remarks .... </string>
    <string name="add"> Add </string>

    <string name="search"> Search... </string>
    <string name="search_for_items"> Search for items </string>


    <string name="user_type">User Type</string>
    <string name="subscription_ends_on">Subscription ends on</string>

    <string name="language">Language</string>
    <string name="language_arabic">العربية</string>
    <string name="language_english">English</string>

    <string name="notifications">Notification</string>
    <string name="edit">Edit</string>


</resources>